[gd_scene load_steps=6 format=2]

[ext_resource path="res://ShipPath.gd" type="Script" id=1]
[ext_resource path="res://GUI/fleetFollowTarget.png" type="Texture" id=2]
[ext_resource path="res://DrawingCursor.gd" type="Script" id=3]
[ext_resource path="res://GUI/cursorTarget.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 22.8806

[node name="ShipPath" type="Path2D"]
curve = null
script = ExtResource( 1 )

[node name="MousePolling" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="PathFollow2D" type="PathFollow2D" parent="."]
loop = false
lookahead = 6.0

[node name="FleetTarget" type="Position2D" parent="PathFollow2D"]

[node name="Sprite" type="Sprite" parent="PathFollow2D"]
self_modulate = Color( 1, 1, 1, 0.72549 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="DrawingCursor" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="DrawingCursor"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrawingCursor"]
shape = SubResource( 1 )

[node name="DestructionTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="MousePolling" to="." method="_on_MousePolling_timeout"]
[connection signal="timeout" from="DestructionTimer" to="." method="_on_DestructionTimer_timeout"]
